--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 #security
 spring.main.allow-circular-references=true
+
+#show sql
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
